[js]보드판 구획 나누기

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@
     background-color: darkgreen;
 }
 .i_block{
-    background-color: darkorchid
+    background-color: darkorchid;
 }
 .s_block{
     background-color: dodgerblue;
