--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 *{
     padding: 0px;
     margin: 0px;
+    font-size: 2.3dvh;
 }
 .container{
-    width: 70dvw;
-    height: 70vw;
-    height: 70dvw;
-    left: 15%;
+    width: 80dvh;
+    height: 80dvh;
+    left: calc(50dvw - 40dvh);
     top: 10dvh;
-    position: relative;
+    position: absolute;
     background-color: yellowgreen;
     border-width: 1px;
     border-style: solid;
@@ -21,29 +21,39 @@
 .item{
     border-style: solid;
     border-width: 1px;
+    position: relative;    
 }
 .item:nth-child(1){
     grid-row: 1/4;
-    border-style: solid;
-    border-width: 3px;
 }
 .board{
     display: grid;
-    width: calc(70dvw * 2/3 - 2px);
-    height: calc(70dvw - 2px);
+    width: 100%;
+    height: 100%;
     left: 0;
     bottom: 0;
-    position: absolute;    
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    gap: 1px;
+    position: relative;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(15, 1fr);    
 }
 .block{
     background-color: aqua;
-    border-style: solid;
+    border-style: dotted;
+    border-width: 1px;
+}
+.small_board{
+    display: grid;
+    width: 70%;
+    height: 70%;
+    left: 15%;
+    position: relative;
+    border: 1px solid black;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+}
+.small_block{
+    background-color: blueviolet;
+    border-style: dotted;
     border-width: 1px;
 }
 .o_block{
