[js] next 그리기 完, 내려온 블록 앉히고 다음 블록 나오기 完, hold 기능 구현 中

--- a/css/main.css
+++ b/css/main.css
@@ -49,18 +49,27 @@ h1{
 .block{    
     border: 1px dotted;
 }
-.small_board{
+.small_board_odd{
     display: grid;
-    width: 80%;
-    height: 60%;
+    width: 64%;
+    height: 48%;
     left: 10%;  
     position: relative;
-    border: 1px solid black;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    /* border: 1px solid black; */
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+.small_board{
+    display: grid;
+    width: 64%;
+    height: 48%;
+    left: 18%;  
+    position: relative;
+    /* border: 1px solid black; */
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 }
 .small_block{
-    background-color: blueviolet;
     border-style: dotted;
     border-width: 1px;
 }
