--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ h1{
     box-shadow: 3px 3px 5px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 2fr 1fr 1fr 2fr;
+    grid-template-rows: 3fr 1fr 1fr 1fr 3fr;
     text-align: center;
     font-size: 2.3dvh;
 }
@@ -30,10 +30,10 @@ h1{
     position: relative;    
 }
 .item:nth-child(1){
-    grid-row: 1/5;
+    grid-row: 1/6;
 }
 .item:nth-child(2){    
-    grid-row: 1/5;
+    grid-row: 1/6;
 }
 .board{
     display: grid;
@@ -48,16 +48,6 @@ h1{
 }
 .block{    
     border: 1px dotted;
-}
-.small_board_odd{
-    display: grid;
-    width: 64%;
-    height: 48%;
-    left: 10%;  
-    position: relative;
-    /* border: 1px solid black; */
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
 }
 .small_board{
     display: grid;
@@ -77,13 +67,13 @@ h1{
     background-color: #FFD300;
 }
 .l_block{
-    background-color: #C40233;
+    background-color: #0087BD;
 }
 .j_block{
     background-color: #009F6B;
 }
 .i_block{
-    background-color: #0087BD;
+    background-color: #C40233;
 }
 .s_block{
     background-color: darkorange;
