--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@ h1{
     left: calc(50dvw - 40dvh);
     top: 13dvh;
     position: absolute;
-    background-color:darkgrey;
-    border-width: 1px;
+    /* background-color:darkgrey; */
+    border-width: 1px solid black;
     border-style: solid;
     border-color: black;
     box-shadow: 3px 3px 5px;
@@ -26,6 +26,7 @@ h1{
     font-size: 2.3dvh;
 }
 .item{
+    background-color: darkgrey;
     border: 1px solid black;
     position: relative;    
 }
