--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,7 @@ h1{
     left: calc(50dvw - 40dvh);
     top: 13dvh;
     position: absolute;
-    /* background-color:darkgrey; */
-    border-width: 1px solid black;
-    border-style: solid;
-    border-color: black;
+    border: 1px solid black;
     box-shadow: 3px 3px 5px;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -65,25 +62,25 @@ h1{
     grid-template-rows: repeat(4, 1fr);
 }
 .o_block{
-    background-color: #FFD300;
+    background-color: rgb(255, 211, 0);
 }
 .l_block{
-    background-color: darkorange;
+    background-color: rgb(255, 140, 0);
 }
 .j_block{
-    background-color: #005293;
+    background-color: rgb(0, 82, 147);
 }
 .i_block{
-    background-color: #0087BD;
+    background-color: rgb(0, 135, 189);
 }
 .s_block{
-    background-color: #009F6B;
+    background-color: rgb(0, 159, 107);
 }
 .z_block{
-    background-color: #C40233;
+    background-color: rgb(196, 2, 51);
 }
 .t_block{
-    background-color: darkorchid;
+    background-color: rgb(153, 50, 204);
 }
 .shadow{
     opacity: 0.4;
@@ -106,7 +103,7 @@ h1{
 #holdBox{
     width: 80%;
     aspect-ratio: 1;
-    left: 10%;    
+    left: 10%;
 }
 #nextBox{
     width: 80%;
