[js] 굳히기 애니메이션 디자인 수정 中

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,11 @@ h1{
     text-align: center;
     font-size: 2.3dvh;
 }
+#blockLayer{
+    position: absolute;
+    border: none;
+    box-shadow: none;
+}
 .item{
     background-color: darkgrey;
     border: 1px solid black;
@@ -44,7 +49,7 @@ h1{
     position: relative;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(20, 1fr);
-    background-color: grey;
+    background-color: rgb(128, 128, 128);
 }
 .grid{
     border: 1px dotted rgb(70, 70, 70);
@@ -87,11 +92,10 @@ h1{
 }
 .innerBlock{
     position: relative;
-    width: calc(100% - 4px);
-    height: calc(100% - 4px);
-    left: 2px;
-    top: 2px;
-    /* border: 1px solid black; */
+    width: 84%;
+    height: 84%;
+    left: 8%;
+    top: 8%;
     box-shadow: 2px 2px rgba(0,0,0,0.5), -2px -2px rgba(255,255,255,0.5);
 }
 .blackBox{
