--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ h1{
     position: relative;
     font-size: 5dvh;
     top: 3dvh;
+    letter-spacing: 1dvh;
 }
 .container{
     width: 80dvh;
@@ -132,4 +133,21 @@ h1{
 #nextBuffer{
     width:100%;
     height: 3.6dvh;
+}
+#textLayer{
+    width: 100dvw;
+    height: 100dvh;
+    top: 0px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    
+}
+#textBoard{
+    text-align: center;
+    top: 40dvh;
+    position: relative;
+    font-size: 6dvh;
+    text-shadow: 2px 2px rgba(255, 255, 255, 0.5);
+    letter-spacing: 1dvh;
 }
