--- a/css/main.css
+++ b/css/main.css
@@ -8,31 +8,110 @@ h1{
     top: 1dvh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 8dvh;
+    font-weight: 900;
     letter-spacing: 0.4dvh;
 }
 h1 span:nth-child(1){
     color: rgb(196, 2, 51);
-    text-shadow: 0.4dvh 0.4dvh rgba(196, 2, 51, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(196, 2, 51),
+                0 -0.27dvh rgb(196, 2, 51),
+                -0.27dvh -0.27dvh rgb(196, 2, 51),
+                0.27dvh 0 rgb(196, 2, 51),
+                0 0.27dvh rgb(196, 2, 51),
+                -0.27dvh 0.27dvh rgb(196, 2, 51),
+                0.27dvh -0.27dvh rgb(196, 2, 51),
+                0.27dvh 0.27dvh rgb(196, 2, 51);
 }
 h1 span:nth-child(2){
     color: rgb(255, 140, 0);
-    text-shadow: 0.4dvh 0.4dvh rgba(255, 140, 0, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(255, 140, 0),
+                0 -0.27dvh rgb(255, 140, 0),
+                -0.27dvh -0.27dvh rgb(255, 140, 0),
+                0.27dvh 0 rgb(255, 140, 0),
+                0 0.27dvh rgb(255, 140, 0),
+                -0.27dvh 0.27dvh rgb(255, 140, 0),
+                0.27dvh -0.27dvh rgb(255, 140, 0),
+                0.27dvh 0.27dvh rgb(255, 140, 0);
 }
 h1 span:nth-child(3){
     color: rgb(255, 211, 0);
-    text-shadow: 0.4dvh 0.4dvh rgba(255, 211, 0, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(255, 211, 0),
+                0 -0.27dvh rgb(255, 211, 0),
+                -0.27dvh -0.27dvh rgb(255, 211, 0),
+                0.27dvh 0 rgb(255, 211, 0),
+                0 0.27dvh rgb(255, 211, 0),
+                -0.27dvh 0.27dvh rgb(255, 211, 0),
+                0.27dvh -0.27dvh rgb(255, 211, 0),
+                0.27dvh 0.27dvh rgb(255, 211, 0);
 }
 h1 span:nth-child(4){
     color: rgb(0, 159, 107);
-    text-shadow: 0.4dvh 0.4dvh rgba(0, 159, 107, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(0, 159, 107),
+                0 -0.27dvh rgb(0, 159, 107),
+                -0.27dvh -0.27dvh rgb(0, 159, 107),
+                0.27dvh 0 rgb(0, 159, 107),
+                0 0.27dvh rgb(0, 159, 107),
+                -0.27dvh 0.27dvh rgb(0, 159, 107),
+                0.27dvh -0.27dvh rgb(0, 159, 107),
+                0.27dvh 0.27dvh rgb(0, 159, 107);
 }
 h1 span:nth-child(5){
     color: rgb(0, 82, 147);
-    text-shadow: 0.4dvh 0.4dvh rgba(0, 82, 147, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(0, 82, 147),
+                0 -0.27dvh rgb(0, 82, 147),
+                -0.27dvh -0.27dvh rgb(0, 82, 147),
+                0.27dvh 0 rgb(0, 82, 147),
+                0 0.27dvh rgb(0, 82, 147),
+                -0.27dvh 0.27dvh rgb(0, 82, 147),
+                0.27dvh -0.27dvh rgb(0, 82, 147),
+                0.27dvh 0.27dvh rgb(0, 82, 147);
 }
 h1 span:nth-child(6){
     color: rgb(153, 50, 204);
-    text-shadow: 0.4dvh 0.4dvh rgba(153, 50, 204, 0.5);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(153, 50, 204),
+                0 -0.27dvh rgb(153, 50, 204),
+                -0.27dvh -0.27dvh rgb(153, 50, 204),
+                0.27dvh 0 rgb(153, 50, 204),
+                0 0.27dvh rgb(153, 50, 204),
+                -0.27dvh 0.27dvh rgb(153, 50, 204),
+                0.27dvh -0.27dvh rgb(153, 50, 204),
+                0.27dvh 0.27dvh rgb(153, 50, 204);
 }
 .container{
     width: 80dvh;
