--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,6 @@ h1 span:nth-child(6){
     top: 13dvh;
     position: absolute;
     border: 3px solid black;
-    box-shadow: 2px 2px 5px;
     border-radius: 2%;
     overflow: hidden;
     display: grid;
@@ -149,7 +148,7 @@ h1 span:nth-child(6){
     left: calc(50dvw - 20dvh);
     top: 13dvh;
     position: absolute;
-    border: 2px solid rgba(0,0,0,0);
+    border: 3px solid rgba(0,0,0,0);
     text-align: center;
 }
 .item{
@@ -158,7 +157,14 @@ h1 span:nth-child(6){
 }
 #background{
     background-color: rgb(169, 169, 169);
-    /* background-color: rgb(128, 128, 128); */
+    box-shadow: 0.4dvh 0.4dvh 1dvh rgb(0, 0, 0),
+    -0.4dvh -0.4dvh rgb(80, 80, 80),
+    -0.4dvh 0.4dvh rgb(50, 50, 50),
+    0.4dvh -0.4dvh rgb(50, 50, 50),
+    0.4dvh 0 rgb(50, 50, 50),
+    0 0.4dvh rgb(50, 50, 50),
+    -0.4dvh 0 rgb(50, 50, 50),
+    0 -0.4dvh rgb(50, 50, 50);
 }
 #boardSection, #centerBackground{
     border-left: 3px solid black;
@@ -355,15 +361,74 @@ h1 span:nth-child(6){
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     visibility: hidden;
-    
 }
-.modal div{
-    text-align: center;
-    top: 40dvh;
+.modal_window{
+    width: 32dvh;
+    height: 50dvh;
+    left: calc(50dvw - 16dvh);
+    top: 28dvh;
+    position: absolute;
+    border: 3px solid rgba(0,0,0,0);
+    border-radius: 20px;
+    background-color: rgb(180, 180, 180);    
+}
+.modal_window>div{
     position: relative;
-    font-size: 6dvh;
-    font-style: italic;
+    width: calc(100% - 0.2dvh);
+    height: calc(100% - 0.2dvh);
+    top: 0.1dvh;
+    left: 0.1dvh;
+    border-radius: 20px;
+    background-color: rgb(180, 180, 180);
+    box-shadow: 0.5dvh 0.5dvh rgba(0, 0, 0, 0.2),
+                -0.5dvh -0.5dvh rgba(255, 255, 255, 0.2);
+}
+.modal_window>div>div{
+    position: relative;
+    width: calc(100% - 3dvh);
+    height: calc(100% - 3dvh);
+    top: 0.5dvh;
+    left: 0.5dvh;
+    border: 1dvh solid rgb(80, 80, 80);
+    border-radius: 20px;
+    background-color: rgb(30, 30, 30);
+    text-align: center;
+}
+.modal_title{
+    padding-top: 3.2dvh;
+    padding-bottom: 1.5dvh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3.4dvh;
     font-weight: bold;
-    text-shadow: 0.3dvh 0.3dvh rgba(255, 255, 255, 0.5);
-    letter-spacing: 1dvh;
+    color: white;
+    letter-spacing: 0.2dvh;
+    text-shadow: 0.17dvh 0.17dvh rgba(200, 200, 200, 0.5);
+}
+.modal_button{
+    display: block;
+    margin-top: 1.5dvh;
+    position: relative;
+    width: 70%;
+    left: calc(15% - 1px);
+    aspect-ratio: 4/1;
+    border-radius: 12px;
+    border: 2px solid rgb(80, 80, 80);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.4));
+    text-decoration: none;
+}
+.modal_button:hover{
+    border: 2px solid rgb(100, 100, 100);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.2));
+}
+.modal_button>span{
+    position: relative;
+    top: 0.9dvh;
+    font-size: 2.3dvh;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-shadow: 0.17dvh 0.17dvh rgba(0, 0, 0, 0.5);
+}
+.modal_button:hover>span{
+    top: 0.75dvh;
 }
