--- a/css/game_board.css
+++ b/css/game_board.css
@@ -1,6 +1,10 @@
 *{
     padding: 0px;
     margin: 0px;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
 h1{
     text-align: center;
