--- a/css/home.css
+++ b/css/home.css
@@ -1,64 +1,113 @@
 #home{
     width: 80dvh;
-    height: 80dvh;
+    height: 88dvh;
     left: calc(50dvw - 40dvh);
-    top: 10dvh;
+    top: 6dvh;
     position: absolute;
     border: 3px solid black;
     border-radius: 2%;
     overflow: hidden;
     text-align: center;
+    background-color: rgb(30, 30, 30);
+    z-index: -1;
+}
+#home_logo{
+    position: absolute;
+    width: 76dvh;
+    height: 76dvh;
+    top: 4%;
+    left: calc(50% - 38dvh);
+}
+#upperBorderBox{
+    position: absolute;
+    width: calc(81% + 1.8dvh);
+    height: calc(27% + 1.8dvh);
+    left: calc(9.5% - 0.9dvh);
+    top: calc(0% - 0.9dvh);
+    background-color: rgb(0, 84, 127);
+    background-image: linear-gradient(to right ,rgb(0, 108, 180), rgb(0, 54 , 90));
+    z-index: -1;
+}
+#lowerBorderBox{
+    position: absolute;
+    width: calc(27% + 1.8dvh);
+    height: 27%;
+    left: calc(36.5% - 0.5dvh);
+    top: calc(27% + 0.9dvh);
+    background-color: rgb(0, 84, 127);
+    background-image: linear-gradient(to right ,rgb(0, 90, 150), rgb(0, 72, 120));
+    z-index: -1;
 }
 #outerUpperBox{
     position: absolute;
     width: 81%;
     height: 27%;
-    left: calc(9.5% - 0.6dvh);
-    top: calc(3% - 0.6dvh);
-    border: 0.6dvh solid rgb(0, 84, 127);
+    left: calc(9.5% - 0.5dvh);
+    top: calc(0% - 0.5dvh);
+    border: 0.5dvh solid rgb(0, 84, 127);
     background-color: rgb(0, 84, 127);
     background-image: linear-gradient(rgb(0, 60, 100), rgb(0, 84, 140));
+    z-index: -1;
 }
 #outerLowerBox{
     position: absolute;
     width: 27%;
     height: 27%;
     left: 36.5%;
-    top: 30%;
-    border: 0.6dvh solid rgb(0, 84, 127);
+    top: 27%;
+    border: 0.5dvh solid rgb(0, 84, 127);
     border-top: none;
     background-color: rgb(0, 84, 127);
     background-image: linear-gradient(rgb(0, 84, 140), rgb(0, 108, 180));
+    z-index: -1;
 }
 #innerUpperBox{
     position: absolute;
-    width: 77%;
-    height: 23%;
-    left: calc(11.5% - 0.6dvh);
-    top: calc(5% - 0.6dvh);
-    border: 0.6dvh solid rgb(0, 84, 127);
+    width: 75%;
+    height: 21%;
+    left: calc(12.5% - 0.4dvh);
+    top: calc(3% - 0.4dvh);
+    border: 0.4dvh solid rgb(0, 84, 127);
     background-color: rgb(0, 84, 127);
-    background-image: linear-gradient(rgb(0, 36 , 60), rgb(0, 56, 90));
-    box-shadow: 0 0.6dvh rgb(0, 74, 120);
+    background-image: linear-gradient(rgb(0, 36 , 60), rgb(0, 54, 90));
+}
+#innerUpperBox:after{
+    content: '';
+    position: absolute;
+    width: calc(100% + 1.6dvh);
+    height: calc(100% + 1.6dvh);
+    left: -0.8dvh;
+    top: -0.8dvh;
+    background-image: linear-gradient(to right ,rgb(0, 108, 180), rgb(0, 54 , 90));
+    z-index: -1;
 }
 #innerLowerBox{
     position: absolute;
-    width: 23%;
+    width: 21%;
     height: 27.1%;
-    left: 38.5%;
-    top: 27.9%;
-    border: 0.6dvh solid rgb(0, 84, 127);
+    left: 39.5%;
+    top: 23.9%;
+    border: 0.4dvh solid rgb(0, 84, 127);
     border-top: none;
     background-color: rgb(0, 84, 127);
-    background-image: linear-gradient(rgb(0, 56, 90), rgb(0, 74, 120));
+    background-image: linear-gradient(rgb(0, 54, 90), rgb(0, 72, 120));
+}
+#innerLowerBox:after{
+    content: '';
+    position: absolute;
+    width: calc(100% + 1.6dvh);
+    height: calc(100% + 0.8dvh);
+    left: -0.8dvh;
+    background-image: linear-gradient(to right ,rgb(0, 90, 150), rgb(0, 72, 120));
+    z-index: -1;
 }
 #innerUpperBox span{
     position: relative;
-    font-size: 18dvh;
+    font-size: 16dvh;
     font-weight: 900;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    top: -4dvh;
-    letter-spacing: -0.4dvh;
+    top: -3.5dvh;
+    letter-spacing: -0.2dvh;
 }
 #innerUpperBox span:nth-child(1){
     color: rgb(196, 2, 51);
@@ -161,4 +210,67 @@
                 -0.27dvh 0.27dvh rgb(153, 50, 204),
                 0.27dvh -0.27dvh rgb(153, 50, 204),
                 0.27dvh 0.27dvh rgb(153, 50, 204);
+}
+#home_menu{
+    position: relative;
+    width: 45%;
+    left: 27.5%;
+    top: 54%;
+    /* background-color: rgba(0, 0, 0, 0.2); */
+}
+.home_button{
+    display: block;
+    margin-top: 1.5dvh;
+    position: relative;
+    width: 70%;
+    left: calc(15% - 1px);
+    aspect-ratio: 4.5/1;
+    border-radius: 12px;
+    border: 2px solid rgb(80, 80, 80);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.4));
+    text-decoration: none;
+}
+.home_button:hover{
+    border: 2px solid rgb(100, 100, 100);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.2));
+}
+.home_button:active{
+    border: 2px solid rgb(60, 60, 60);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.5));
+}
+.home_button>span{
+    position: relative;
+    top: 1.4dvh;
+    font-size: 2.8dvh;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-shadow: 0.17dvh 0.17dvh rgba(0, 0, 0, 0.5);
+}
+.home_button:hover>span{
+    top: 1.25dvh;
+    left: -0.1dvh;
+}
+.home_button:active>span{
+    top: 1.55dvh;
+    left: 0.1dvh;
+}
+#level_button{
+    position: relative;
+    width: 90%;
+    left: 5%;
+}
+#levelup{
+    /* width: 80%;
+    left: calc(18% - 1px); */
+}
+#levelup>span{
+    top: 1.25dvh;
+    font-size: 2.5dvh;
+}
+#levelup:hover>span{
+    top: 1.1dvh;
+}
+#levelup:active>span{
+    top: 1.35dvh;
 }
