--- a/css/home.css
+++ b/css/home.css
@@ -61,15 +61,28 @@
     background-image: linear-gradient(rgb(0, 84, 140), rgb(0, 108, 180));
     z-index: -1;
 }
-#innerUpperBox{
+.logo_title{
     position: absolute;
     width: 75%;
     height: 21%;
     left: calc(12.5% - 0.4dvh);
     top: calc(3% - 0.4dvh);
+    font-size: 16dvh;
+    font-weight: 900;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 15dvh;
+    letter-spacing: -0.2dvh;
+}
+#innerUpperBox{    
     border: 0.4dvh solid rgb(0, 84, 127);
-    background-color: rgb(0, 84, 127);
     background-image: linear-gradient(rgb(0, 36 , 60), rgb(0, 54, 90));
+}
+#textShadowBox{
+    border: 0.4dvh solid transparent;
+    background-image: radial-gradient(ellipse 99% 55% at 50% 84%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0) 51%, rgba(255, 255, 255, 0.2) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
 }
 #innerUpperBox:after{
     content: '';
@@ -100,14 +113,6 @@
     left: -0.8dvh;
     background-image: linear-gradient(to right ,rgb(0, 90, 150), rgb(0, 72, 120));
     z-index: -1;
-}
-#innerUpperBox span{
-    position: relative;
-    font-size: 16dvh;
-    font-weight: 900;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 15dvh;
-    letter-spacing: -0.2dvh;
 }
 #innerUpperBox span:nth-child(1){
     color: rgb(196, 2, 51);
@@ -143,6 +148,23 @@
                 0.27dvh -0.27dvh rgb(255, 140, 0),
                 0.27dvh 0.27dvh rgb(255, 140, 0);
 }
+#innerUpperBox:not(:has(>span:nth-child(5))) span:nth-child(2){
+    color: rgb(255, 211, 0);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(255, 211, 0),
+                0 -0.27dvh rgb(255, 211, 0),
+                -0.27dvh -0.27dvh rgb(255, 211, 0),
+                0.27dvh 0 rgb(255, 211, 0),
+                0 0.27dvh rgb(255, 211, 0),
+                -0.27dvh 0.27dvh rgb(255, 211, 0),
+                0.27dvh -0.27dvh rgb(255, 211, 0),
+                0.27dvh 0.27dvh rgb(255, 211, 0);
+}
 #innerUpperBox span:nth-child(3){
     color: rgb(255, 211, 0);
     text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
@@ -160,6 +182,23 @@
                 0.27dvh -0.27dvh rgb(255, 211, 0),
                 0.27dvh 0.27dvh rgb(255, 211, 0);
 }
+#innerUpperBox:not(:has(>span:nth-child(5))) span:nth-child(3){
+    color: rgb(0, 159, 107);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(0, 159, 107),
+                0 -0.27dvh rgb(0, 159, 107),
+                -0.27dvh -0.27dvh rgb(0, 159, 107),
+                0.27dvh 0 rgb(0, 159, 107),
+                0 0.27dvh rgb(0, 159, 107),
+                -0.27dvh 0.27dvh rgb(0, 159, 107),
+                0.27dvh -0.27dvh rgb(0, 159, 107),
+                0.27dvh 0.27dvh rgb(0, 159, 107);
+}
 #innerUpperBox span:nth-child(4){
     color: rgb(0, 159, 107);
     text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
@@ -176,6 +215,23 @@
                 -0.27dvh 0.27dvh rgb(0, 159, 107),
                 0.27dvh -0.27dvh rgb(0, 159, 107),
                 0.27dvh 0.27dvh rgb(0, 159, 107);
+}
+#innerUpperBox:not(:has(>span:nth-child(5))) span:nth-child(4){
+    color: rgb(0, 82, 147);
+    text-shadow: 0 -0.2dvh rgba(255, 255, 255, 0.7),
+                -0.2dvh 0 rgba(255, 255, 255, 0.7),
+                -0.2dvh -0.2dvh rgba(255, 255, 255, 0.7),
+                0 0.2dvh rgba(0, 0, 0, 0.4),
+                0.2dvh 0 rgba(0, 0, 0, 0.4),
+                0.2dvb 0.2dvh rgba(0, 0, 0, 0.4),               
+                -0.27dvh 0 rgb(0, 82, 147),
+                0 -0.27dvh rgb(0, 82, 147),
+                -0.27dvh -0.27dvh rgb(0, 82, 147),
+                0.27dvh 0 rgb(0, 82, 147),
+                0 0.27dvh rgb(0, 82, 147),
+                -0.27dvh 0.27dvh rgb(0, 82, 147),
+                0.27dvh -0.27dvh rgb(0, 82, 147),
+                0.27dvh 0.27dvh rgb(0, 82, 147);
 }
 #innerUpperBox span:nth-child(5){
     color: rgb(0, 82, 147);
@@ -210,31 +266,6 @@
                 -0.27dvh 0.27dvh rgb(153, 50, 204),
                 0.27dvh -0.27dvh rgb(153, 50, 204),
                 0.27dvh 0.27dvh rgb(153, 50, 204);
-}
-#textShadowBox{
-    position: absolute;
-    width: 75%;
-    height: 21%;
-    left: calc(12.5% - 0.4dvh);
-    top: calc(3% - 0.4dvh);
-    border: 0.4dvh solid transparent;
-    background-image: radial-gradient(ellipse 99% 55% at 50% 84%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0) 51%, rgba(255, 255, 255, 0.2) 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    font-size: 16dvh;
-    font-weight: 900;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    letter-spacing: -0.2dvh;
-    line-height: 15dvh;
-}
-#textShadowBox span{
-    position: relative;
-    font-size: 16dvh;
-    font-weight: 900;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    top: -3.5dvh;
-    letter-spacing: -0.2dvh;    
 }
 #home_menu{
     position: relative;
@@ -315,17 +346,20 @@
     font-size: 3.8dvh;
     align-items: center;
     justify-items: center;    
+    color: transparent;
+}
+.left_arrow>span, .right_arrow>span{
     background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.4));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
 }
-.arrow_button:hover>span{
+.left_arrow:hover>span, .right_arrow:hover>span{
     background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.2));
     top: -0.3dvh;
     left: -0.1dvh;
 }
-.arrow_button:active>span{
+.left_arrow:active>span, .right_arrow:active>span{
     background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.4));
     top: -0.1dvh;
     left: 0.1dvh;
@@ -341,7 +375,7 @@
 }
 #button_background>span{
     position: relative;
-    top: -0.4dvh;
+    top: -0.3dvh;
     display: flex;
     font-size: 3.8dvh;
     align-items: center;
@@ -357,18 +391,18 @@
                 -0.2dvh 0.2dvh rgb(80, 80, 80);
 }
 #button_background:has(+ div>.left_arrow:hover)>span:nth-child(1){
-    top: -0.5dvh;
+    top: -0.4dvh;
     left: -0.1dvh;
 }
 #button_background:has(+ div>.right_arrow:hover)>span:nth-child(2){
-    top: -0.5dvh;
+    top: -0.4dvh;
     left: -0.1dvh;
 }
 #button_background:has(+ div>.left_arrow:active)>span:nth-child(1){
-    top: -0.3dvh;
+    top: -0.2dvh;
     left: 0.1dvh;
 }
 #button_background:has(+ div>.right_arrow:active)>span:nth-child(2){
-    top: -0.3dvh;
+    top: -0.2dvh;
     left: 0.1dvh;
 }
