--- a/css/game_board.css
+++ b/css/game_board.css
@@ -255,11 +255,9 @@
 }
 #backBoard{
     background-color: rgb(128, 128, 128);
-    /* background-color: rgb(0, 0, 0); */
 }
 .grid{
     border: 1px dotted rgb(70, 70, 70);
-    /* border: 1px dotted rgb(50, 50, 50); */
 }
 .block{
     border: 1px dotted rgb(0, 0, 0);
@@ -362,8 +360,9 @@
     background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.4));
     box-shadow: 0.4dvh 0.4dvh rgba(0, 0, 0, 0.3),
                 -0.4dvh -0.4dvh rgba(255, 255, 255, 0.1);
-    font-size: 5.4dvh;
+    /* font-size: 5.4dvh; */
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 8.5dvh;
     color: white;
     text-shadow: 0.2dvh 0.2dvh rgba(0, 0, 0, 0.5);
 }
